--- a/weatherapp202312/package.json
+++ b/weatherapp202312/package.json
@@ -40,12 +40,13 @@
     "webpack-dev-server": "^4.0.0-beta.0"
   },
   "dependencies": {
+    "axios": "^1.6.3",
     "vue": "^3.2.14",
     "vue-router": "^4.2.5"
   },
   "eslintConfig": {
     "globals": {
-        "kakao": false
+      "kakao": false
     }
-}
+  }
 }
